--- a/test.ipynb
+++ b/test.ipynb
@@ -104,24 +104,73 @@
     {
      "data": {
       "text/plain": [
+       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
+       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
+       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
+       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
+       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
+       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
+       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
+       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
+       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
+       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
+       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
+       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
+       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
+       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
+       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
+       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
+       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
+       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
+       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
+       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
+       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
+       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
+       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
+       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
+       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "{'vendor_id': 'CMT',\n",
-       " 'pickup_datetime': '2010-01-02 13:28:13',\n",
-       " 'dropoff_datetime': '2010-01-02 13:33:57',\n",
-       " 'passenger_count': np.int64(3),\n",
-       " 'trip_distance': np.float64(1.2),\n",
-       " 'pickup_longitude': np.float64(-73.988027),\n",
-       " 'pickup_latitude': np.float64(40.779303),\n",
+       " 'pickup_datetime': '2010-01-29 18:50:39',\n",
+       " 'dropoff_datetime': '2010-01-29 19:07:36',\n",
+       " 'passenger_count': np.int64(1),\n",
+       " 'trip_distance': np.float64(2.3),\n",
+       " 'pickup_longitude': np.float64(-73.95698199999998),\n",
+       " 'pickup_latitude': np.float64(40.770736),\n",
        " 'rate_code': '1',\n",
        " 'store_and_fwd_flag': '0',\n",
-       " 'dropoff_longitude': np.float64(-73.982404),\n",
-       " 'dropoff_latitude': np.float64(40.767139),\n",
+       " 'dropoff_longitude': np.float64(-73.97958099999998),\n",
+       " 'dropoff_latitude': np.float64(40.746423),\n",
        " 'payment_type': 'Cre',\n",
-       " 'fare_amount': np.float64(5.7),\n",
-       " 'surcharge': np.float64(0.0),\n",
+       " 'fare_amount': np.float64(10.1),\n",
+       " 'surcharge': np.float64(1.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
-       " 'tip_amount': np.float64(1.0),\n",
+       " 'tip_amount': np.float64(1.74),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(7.2)}"
+       " 'total_amount': np.float64(13.34)}"
       ]
      },
      "execution_count": null,
@@ -135,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -225,29 +274,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a100dfffffff │ 0.7357423387749514 │\n",
-       "│ 862a107a7ffffff │ 1.1270767807585569 │\n",
-       "│ 862a13837ffffff │                1.2 │\n",
-       "│ 862a103a7ffffff │ 1.8788675213675212 │\n",
-       "│ 862a10a37ffffff │ 7.1923076923076925 │\n",
-       "│ 862b8dc77ffffff │                0.9 │\n",
-       "│ 862a1678fffffff │                2.0 │\n",
-       "│ 862a1059fffffff │ 1.0714285714285714 │\n",
-       "│ 862a102a7ffffff │ 0.9058536585365854 │\n",
-       "│ 862a102c7ffffff │ 0.5833333333333334 │\n",
+       "│ 862a1072fffffff │ 0.7574998071221831 │\n",
+       "│ 862a100c7ffffff │ 0.6247265087477886 │\n",
+       "│ 862a10737ffffff │ 1.0371764705882354 │\n",
+       "│ 862a10087ffffff │  1.544650726676043 │\n",
+       "│ 862a1019fffffff │ 1.8341484716157206 │\n",
+       "│ 862a10017ffffff │ 0.8133979641299078 │\n",
+       "│ 862a10787ffffff │ 3.4675238095238097 │\n",
+       "│ 862a104efffffff │ 1.1793333333333331 │\n",
+       "│ 862a1044fffffff │ 1.8300280898876404 │\n",
+       "│ 862a10627ffffff │ 0.7683108108108108 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a35407ffffff │                1.0 │\n",
-       "│ 862b8c25fffffff │                1.0 │\n",
-       "│ 862a1312fffffff │               2.35 │\n",
-       "│ 862a1438fffffff │               10.0 │\n",
-       "│ 862a1308fffffff │                3.2 │\n",
-       "│ 862a11d8fffffff │                3.0 │\n",
-       "│ 862a11427ffffff │                1.0 │\n",
-       "│ 862aa1d27ffffff │                3.3 │\n",
-       "│ 862aac917ffffff │                1.8 │\n",
-       "│ 862a13027ffffff │                2.0 │\n",
+       "│ 862a329a7ffffff │               1.66 │\n",
+       "│ 86397312fffffff │                2.2 │\n",
+       "│ 863575847ffffff │                1.0 │\n",
+       "│ 8639048d7ffffff │                6.3 │\n",
+       "│ 862aac4e7ffffff │                1.5 │\n",
+       "│ 862b1ecafffffff │               5.19 │\n",
+       "│ 862a042b7ffffff │                2.0 │\n",
+       "│ 862a0eb17ffffff │                1.0 │\n",
+       "│ 862768257ffffff │                1.4 │\n",
+       "│ 862a1152fffffff │                2.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -264,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -442,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out2 = out >> 'arrow'"
+    "out2 = out >> 'pandas'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -473,16 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = out2['rel1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -786,37 +826,8 @@
     }
    ],
    "source": [
-    "a"
+    "out2['rel1']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Database:\n",
-       "    rel1: 14863778 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount']\n",
-       "    rel2: 11145409 x ['vendor_id', 'pickup_datetime', 'dropoff_datetime', 'passenger_count', 'trip_distance', 'pickup_longitude', 'pickup_latitude', 'rate_code', 'store_and_fwd_flag', 'dropoff_longitude', 'dropoff_latitude', 'payment_type', 'fare_amount', 'surcharge', 'mta_tax', 'tip_amount', 'tolls_amount', 'total_amount', '__index_level_0__']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out >> 'pandas'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
