--- a/test.ipynb
+++ b/test.ipynb
@@ -65,7 +65,7 @@
    ],
    "source": [
     "# dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
-    "dw.Table('data/yellow_tripdata_2010-01.parquet').rel"
+    "dw.Table('data/yellow_tripdata_2010-01.parquet')"
    ]
   },
   {
@@ -153,24 +153,24 @@
     {
      "data": {
       "text/plain": [
-       "{'vendor_id': 'CMT',\n",
-       " 'pickup_datetime': '2010-01-29 18:50:39',\n",
-       " 'dropoff_datetime': '2010-01-29 19:07:36',\n",
-       " 'passenger_count': np.int64(1),\n",
-       " 'trip_distance': np.float64(2.3),\n",
-       " 'pickup_longitude': np.float64(-73.95698199999998),\n",
-       " 'pickup_latitude': np.float64(40.770736),\n",
+       "{'vendor_id': 'VTS',\n",
+       " 'pickup_datetime': '2010-01-22 18:42:00',\n",
+       " 'dropoff_datetime': '2010-01-22 19:02:00',\n",
+       " 'passenger_count': np.int64(5),\n",
+       " 'trip_distance': np.float64(6.17),\n",
+       " 'pickup_longitude': np.float64(-73.950947),\n",
+       " 'pickup_latitude': np.float64(40.779223),\n",
        " 'rate_code': '1',\n",
-       " 'store_and_fwd_flag': '0',\n",
-       " 'dropoff_longitude': np.float64(-73.97958099999998),\n",
-       " 'dropoff_latitude': np.float64(40.746423),\n",
-       " 'payment_type': 'Cre',\n",
-       " 'fare_amount': np.float64(10.1),\n",
+       " 'store_and_fwd_flag': None,\n",
+       " 'dropoff_longitude': np.float64(-73.987053),\n",
+       " 'dropoff_latitude': np.float64(40.72531),\n",
+       " 'payment_type': 'CAS',\n",
+       " 'fare_amount': np.float64(17.3),\n",
        " 'surcharge': np.float64(1.0),\n",
        " 'mta_tax': np.float64(0.5),\n",
-       " 'tip_amount': np.float64(1.74),\n",
+       " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(13.34)}"
+       " 'total_amount': np.float64(18.8)}"
       ]
      },
      "execution_count": null,
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "rel1 | 'select arbitrary(columns(*))' | dict"
+    "rel1 >> 'select arbitrary(columns(*))' >> dict"
    ]
   },
   {
@@ -274,29 +274,29 @@
        "│      hexid      │        tip         │\n",
        "│     varchar     │       double       │\n",
        "├─────────────────┼────────────────────┤\n",
-       "│ 862a1072fffffff │ 0.7574998071221831 │\n",
-       "│ 862a100c7ffffff │ 0.6247265087477886 │\n",
-       "│ 862a10737ffffff │ 1.0371764705882354 │\n",
-       "│ 862a10087ffffff │  1.544650726676043 │\n",
-       "│ 862a1019fffffff │ 1.8341484716157206 │\n",
-       "│ 862a10017ffffff │ 0.8133979641299078 │\n",
-       "│ 862a10787ffffff │ 3.4675238095238097 │\n",
-       "│ 862a104efffffff │ 1.1793333333333331 │\n",
-       "│ 862a1044fffffff │ 1.8300280898876404 │\n",
-       "│ 862a10627ffffff │ 0.7683108108108108 │\n",
+       "│ 862a100dfffffff │ 0.7357423387749517 │\n",
+       "│ 862a107a7ffffff │  1.127076780758557 │\n",
+       "│ 862a1046fffffff │  2.629748110831234 │\n",
+       "│ 862a103a7ffffff │ 1.8788675213675212 │\n",
+       "│ 862a1015fffffff │  4.147971014492754 │\n",
+       "│ 862a10457ffffff │  4.667999999999999 │\n",
+       "│ 862a1054fffffff │ 1.9489696969696968 │\n",
+       "│ 862a104e7ffffff │              2.625 │\n",
+       "│ 862a102afffffff │ 0.6745283018867925 │\n",
+       "│ 862a1038fffffff │ 1.7195959595959593 │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
        "│        ·        │                 ·  │\n",
-       "│ 862a329a7ffffff │               1.66 │\n",
-       "│ 86397312fffffff │                2.2 │\n",
-       "│ 863575847ffffff │                1.0 │\n",
-       "│ 8639048d7ffffff │                6.3 │\n",
-       "│ 862aac4e7ffffff │                1.5 │\n",
-       "│ 862b1ecafffffff │               5.19 │\n",
-       "│ 862a042b7ffffff │                2.0 │\n",
-       "│ 862a0eb17ffffff │                1.0 │\n",
-       "│ 862768257ffffff │                1.4 │\n",
-       "│ 862a1152fffffff │                2.0 │\n",
+       "│ 862a13067ffffff │               15.0 │\n",
+       "│ 862aa08c7ffffff │                1.0 │\n",
+       "│ 862a13c0fffffff │                2.5 │\n",
+       "│ 862a35397ffffff │              11.05 │\n",
+       "│ 862aa5c8fffffff │ 0.3333333333333333 │\n",
+       "│ 862aab48fffffff │                2.0 │\n",
+       "│ 863935577ffffff │                2.0 │\n",
+       "│ 862a1212fffffff │               7.98 │\n",
+       "│ 862a152a7ffffff │                3.0 │\n",
+       "│ 862a13887ffffff │                1.0 │\n",
        "├─────────────────┴────────────────────┤\n",
        "│ 850 rows (20 shown)        2 columns │\n",
        "└──────────────────────────────────────┘"
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
