--- a/test.ipynb
+++ b/test.ipynb
@@ -79,11 +79,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "┌─────────────────┬────────────────────┐\n",
+       "│      hexid      │        tip         │\n",
+       "│     varchar     │       double       │\n",
+       "├─────────────────┼────────────────────┤\n",
+       "│ 881bb2a0b5fffff │              12.22 │\n",
+       "│ 882a100299fffff │  10.02818181818182 │\n",
+       "│ 882a10029dfffff │ 11.666666666666666 │\n",
+       "│ 882a1002c3fffff │               10.0 │\n",
+       "│ 882a10034bfffff │               16.0 │\n",
+       "│ 882a100353fffff │               17.6 │\n",
+       "│ 882a10045bfffff │               10.0 │\n",
+       "│ 882a100487fffff │             11.525 │\n",
+       "│ 882a10060dfffff │               16.1 │\n",
+       "│ 882a100611fffff │               10.0 │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│ 882a13c4d9fffff │               11.5 │\n",
+       "│ 882a13d281fffff │               20.0 │\n",
+       "│ 882a13d529fffff │               15.0 │\n",
+       "│ 882a1438c3fffff │               10.0 │\n",
+       "│ 882a15663bfffff │               10.0 │\n",
+       "│ 882a1ab9c1fffff │              10.01 │\n",
+       "│ 882a353927fffff │              11.05 │\n",
+       "│ 882aa16327fffff │              12.51 │\n",
+       "│ 882aaab9ebfffff │              10.01 │\n",
+       "│ 882ad09327fffff │              12.51 │\n",
+       "├─────────────────┴────────────────────┤\n",
+       "│ 193 rows (20 shown)        2 columns │\n",
+       "└──────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')"
+    "# (dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
+    "\n",
+    "(dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
+    "| 'select *, pickup_latitude as lat, pickup_longitude as lng'       \n",
+    "| 'select *, h3_latlng_to_cell(lat, lng, 8) as hexid'\n",
+    "| 'select hexid, avg(tip_amount) as tip  group by 1'\n",
+    "| 'select h3_h3_to_string(hexid) as hexid, tip'\n",
+    "| 'where tip between 10 and 20'\n",
+    "| 'order by hexid'\n",
+    ")"
    ]
   },
   {
