--- a/test.ipynb
+++ b/test.ipynb
@@ -79,16 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% ▕████████████████████████████████████████████████████████████▏ \n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -130,9 +123,8 @@
     }
    ],
    "source": [
-    "# (dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
-    "\n",
-    "(dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
+    "# (dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
+    "(dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
     "| 'select *, pickup_latitude as lat, pickup_longitude as lng'       \n",
     "| 'select *, h3_latlng_to_cell(lat, lng, 8) as hexid'\n",
     "| 'select hexid, avg(tip_amount) as tip  group by 1'\n",
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,30 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'vendor_id': 'VTS',\n",
-       " 'pickup_datetime': '2010-01-22 18:42:00',\n",
-       " 'dropoff_datetime': '2010-01-22 19:02:00',\n",
-       " 'passenger_count': np.int64(5),\n",
-       " 'trip_distance': np.float64(6.17),\n",
-       " 'pickup_longitude': np.float64(-73.950947),\n",
-       " 'pickup_latitude': np.float64(40.779223),\n",
+       " 'pickup_datetime': '2010-01-21 23:29:00',\n",
+       " 'dropoff_datetime': '2010-01-21 23:34:00',\n",
+       " 'passenger_count': np.int64(1),\n",
+       " 'trip_distance': np.float64(0.92),\n",
+       " 'pickup_longitude': np.float64(-73.98491799999998),\n",
+       " 'pickup_latitude': np.float64(40.73967),\n",
        " 'rate_code': '1',\n",
        " 'store_and_fwd_flag': None,\n",
-       " 'dropoff_longitude': np.float64(-73.987053),\n",
-       " 'dropoff_latitude': np.float64(40.72531),\n",
+       " 'dropoff_longitude': np.float64(-73.97325999999998),\n",
+       " 'dropoff_latitude': np.float64(40.738535),\n",
        " 'payment_type': 'CAS',\n",
-       " 'fare_amount': np.float64(17.3),\n",
-       " 'surcharge': np.float64(1.0),\n",
+       " 'fare_amount': np.float64(4.9),\n",
+       " 'surcharge': np.float64(0.5),\n",
        " 'mta_tax': np.float64(0.5),\n",
        " 'tip_amount': np.float64(0.0),\n",
        " 'tolls_amount': np.float64(0.0),\n",
-       " 'total_amount': np.float64(18.8)}"
+       " 'total_amount': np.float64(5.9)}"
       ]
      },
      "execution_count": null,
@@ -240,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,42 +312,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌─────────────────┬────────────────────┐\n",
-       "│      hexid      │        tip         │\n",
-       "│     varchar     │       double       │\n",
-       "├─────────────────┼────────────────────┤\n",
-       "│ 862a100dfffffff │ 0.7357423387749517 │\n",
-       "│ 862a107a7ffffff │  1.127076780758557 │\n",
-       "│ 862a1046fffffff │  2.629748110831234 │\n",
-       "│ 862a103a7ffffff │ 1.8788675213675212 │\n",
-       "│ 862a1015fffffff │  4.147971014492754 │\n",
-       "│ 862a10457ffffff │  4.667999999999999 │\n",
-       "│ 862a1054fffffff │ 1.9489696969696968 │\n",
-       "│ 862a104e7ffffff │              2.625 │\n",
-       "│ 862a102afffffff │ 0.6745283018867925 │\n",
-       "│ 862a1038fffffff │ 1.7195959595959593 │\n",
-       "│        ·        │                 ·  │\n",
-       "│        ·        │                 ·  │\n",
-       "│        ·        │                 ·  │\n",
-       "│ 862a13067ffffff │               15.0 │\n",
-       "│ 862aa08c7ffffff │                1.0 │\n",
-       "│ 862a13c0fffffff │                2.5 │\n",
-       "│ 862a35397ffffff │              11.05 │\n",
-       "│ 862aa5c8fffffff │ 0.3333333333333333 │\n",
-       "│ 862aab48fffffff │                2.0 │\n",
-       "│ 863935577ffffff │                2.0 │\n",
-       "│ 862a1212fffffff │               7.98 │\n",
-       "│ 862a152a7ffffff │                3.0 │\n",
-       "│ 862a13887ffffff │                1.0 │\n",
-       "├─────────────────┴────────────────────┤\n",
-       "│ 850 rows (20 shown)        2 columns │\n",
-       "└──────────────────────────────────────┘"
+       "┌─────────────────┬─────────────────────┐\n",
+       "│      hexid      │         tip         │\n",
+       "│     varchar     │       double        │\n",
+       "├─────────────────┼─────────────────────┤\n",
+       "│ 862a103b7ffffff │   2.440065244855701 │\n",
+       "│ 862a100afffffff │  0.8011410655084678 │\n",
+       "│ 862a10777ffffff │  0.7949552868931107 │\n",
+       "│ 862a100efffffff │   1.271955271565495 │\n",
+       "│ 862a10a07ffffff │   6.214285714285714 │\n",
+       "│ 862a10637ffffff │  0.6767346938775509 │\n",
+       "│ 862a330afffffff │ 0.25384615384615383 │\n",
+       "│ 862a10097ffffff │   1.585727788279773 │\n",
+       "│ 862a106e7ffffff │   1.700952380952381 │\n",
+       "│ 862a104cfffffff │   3.933333333333333 │\n",
+       "│        ·        │                  ·  │\n",
+       "│        ·        │                  ·  │\n",
+       "│        ·        │                  ·  │\n",
+       "│ 862af5c07ffffff │                 1.0 │\n",
+       "│ 862a1109fffffff │                 1.0 │\n",
+       "│ 862a10b5fffffff │                 1.7 │\n",
+       "│ 862b9cae7ffffff │                 0.8 │\n",
+       "│ 862a11197ffffff │                 1.0 │\n",
+       "│ 862a12a1fffffff │                 4.0 │\n",
+       "│ 862a1560fffffff │                 2.0 │\n",
+       "│ 862a14a67ffffff │                 2.0 │\n",
+       "│ 862a11847ffffff │                 2.0 │\n",
+       "│ 8666ea537ffffff │                 1.0 │\n",
+       "├─────────────────┴─────────────────────┤\n",
+       "│ 850 rows (20 shown)         2 columns │\n",
+       "└───────────────────────────────────────┘"
       ]
      },
      "execution_count": null,
@@ -369,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -860,18 +852,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         vendor_id      pickup_datetime     dropoff_datetime  passenger_count  trip_distance  pickup_longitude  pickup_latitude rate_code store_and_fwd_flag  dropoff_longitude  dropoff_latitude payment_type  fare_amount  surcharge  mta_tax  tip_amount  tolls_amount  total_amount\n",
-       "0              VTS  2010-01-26 07:41:00  2010-01-26 07:45:00                1           0.75        -73.956778        40.767750         1               None         -73.965957         40.765232          CAS          4.5        0.0      0.5        0.00           0.0          5.00\n",
-       "1              DDS  2010-01-30 23:31:00  2010-01-30 23:46:12                1           5.90        -73.996118        40.763932         1               None         -73.981512         40.741193          CAS         15.3        0.5      0.5        0.00           0.0         16.30\n",
-       "2              DDS  2010-01-18 20:22:20  2010-01-18 20:38:12                1           4.00        -73.979673        40.783790         1               None         -73.917852         40.878560          CAS         11.7        0.5      0.5        0.00           0.0         12.70\n",
-       "3              VTS  2010-01-09 01:18:00  2010-01-09 01:35:00                2           4.70        -73.977922        40.763997         1               None         -73.923908         40.759725          CAS         13.3        0.5      0.5        0.00           0.0         14.30\n",
-       "4              CMT  2010-01-18 19:10:14  2010-01-18 19:17:07                1           0.60        -73.990924        40.734682         1                  0         -73.995511         40.739088          Cre          5.3        0.0      0.5        0.87           0.0          6.67\n",
-       "...            ...                  ...                  ...              ...            ...               ...              ...       ...                ...                ...               ...          ...          ...        ...      ...         ...           ...           ...\n",
-       "14863773       CMT  2010-01-06 14:51:19  2010-01-06 15:02:59                2           1.50        -73.970436        40.757928         1                  0         -73.957113         40.764094          Cas          7.7        0.0      0.5        0.00           0.0          8.20\n",
-       "14863774       VTS  2010-01-09 12:52:00  2010-01-09 13:15:00                1          16.77        -73.784115        40.648632         1               None         -73.974673         40.750805          CAS         45.0        0.0      0.5        0.00           0.0         45.50\n",
-       "14863775       CMT  2010-01-09 14:00:44  2010-01-09 14:14:33                1           0.90        -74.002170        40.721619         1                  0         -73.988528         40.721484          Cas          8.1        0.0      0.5        0.00           0.0          8.60\n",
-       "14863776       CMT  2010-01-09 09:52:23  2010-01-09 09:59:41                1           2.00        -73.980066        40.770469         1                  0         -73.958075         40.783242          Cas          7.3        0.0      0.5        0.00           0.0          7.80\n",
-       "14863777       CMT  2010-01-05 15:25:59  2010-01-05 15:33:54                1           1.00        -73.979463        40.739982         1                  0         -73.994477         40.739006          Cas          6.1        0.0      0.5        0.00           0.0          6.60\n",
+       "         vendor_id      pickup_datetime     dropoff_datetime  passenger_count  ...  mta_tax  tip_amount  tolls_amount total_amount\n",
+       "0              VTS  2010-01-26 07:41:00  2010-01-26 07:45:00                1  ...      0.5        0.00           0.0         5.00\n",
+       "1              DDS  2010-01-30 23:31:00  2010-01-30 23:46:12                1  ...      0.5        0.00           0.0        16.30\n",
+       "2              DDS  2010-01-18 20:22:20  2010-01-18 20:38:12                1  ...      0.5        0.00           0.0        12.70\n",
+       "3              VTS  2010-01-09 01:18:00  2010-01-09 01:35:00                2  ...      0.5        0.00           0.0        14.30\n",
+       "4              CMT  2010-01-18 19:10:14  2010-01-18 19:17:07                1  ...      0.5        0.87           0.0         6.67\n",
+       "...            ...                  ...                  ...              ...  ...      ...         ...           ...          ...\n",
+       "14863773       CMT  2010-01-06 14:51:19  2010-01-06 15:02:59                2  ...      0.5        0.00           0.0         8.20\n",
+       "14863774       VTS  2010-01-09 12:52:00  2010-01-09 13:15:00                1  ...      0.5        0.00           0.0        45.50\n",
+       "14863775       CMT  2010-01-09 14:00:44  2010-01-09 14:14:33                1  ...      0.5        0.00           0.0         8.60\n",
+       "14863776       CMT  2010-01-09 09:52:23  2010-01-09 09:59:41                1  ...      0.5        0.00           0.0         7.80\n",
+       "14863777       CMT  2010-01-05 15:25:59  2010-01-05 15:33:54                1  ...      0.5        0.00           0.0         6.60\n",
        "\n",
        "[14863778 rows x 18 columns]"
       ]
@@ -884,6 +876,13 @@
    "source": [
     "out2['rel1']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
