--- a/test.ipynb
+++ b/test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +365,29 @@
    ],
    "source": [
     "rel1 >> 'select count()' >> int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14863778"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel1.do(\n",
+    "    'select count()',\n",
+    "    int,\n",
+    ")"
    ]
   },
   {
@@ -435,36 +458,36 @@
     {
      "data": {
       "text/plain": [
-       "┌─────────────────┬─────────────────────┐\n",
-       "│      hexid      │         tip         │\n",
-       "│     varchar     │       double        │\n",
-       "├─────────────────┼─────────────────────┤\n",
-       "│ 862a103b7ffffff │   2.440065244855701 │\n",
-       "│ 862a100afffffff │  0.8011410655084678 │\n",
-       "│ 862a10777ffffff │  0.7949552868931107 │\n",
-       "│ 862a100efffffff │   1.271955271565495 │\n",
-       "│ 862a10a07ffffff │   6.214285714285714 │\n",
-       "│ 862a10637ffffff │  0.6767346938775509 │\n",
-       "│ 862a330afffffff │ 0.25384615384615383 │\n",
-       "│ 862a10097ffffff │   1.585727788279773 │\n",
-       "│ 862a106e7ffffff │   1.700952380952381 │\n",
-       "│ 862a104cfffffff │   3.933333333333333 │\n",
-       "│        ·        │                  ·  │\n",
-       "│        ·        │                  ·  │\n",
-       "│        ·        │                  ·  │\n",
-       "│ 862af5c07ffffff │                 1.0 │\n",
-       "│ 862a1109fffffff │                 1.0 │\n",
-       "│ 862a10b5fffffff │                 1.7 │\n",
-       "│ 862b9cae7ffffff │                 0.8 │\n",
-       "│ 862a11197ffffff │                 1.0 │\n",
-       "│ 862a12a1fffffff │                 4.0 │\n",
-       "│ 862a1560fffffff │                 2.0 │\n",
-       "│ 862a14a67ffffff │                 2.0 │\n",
-       "│ 862a11847ffffff │                 2.0 │\n",
-       "│ 8666ea537ffffff │                 1.0 │\n",
-       "├─────────────────┴─────────────────────┤\n",
-       "│ 850 rows (20 shown)         2 columns │\n",
-       "└───────────────────────────────────────┘"
+       "┌─────────────────┬────────────────────┐\n",
+       "│      hexid      │        tip         │\n",
+       "│     varchar     │       double       │\n",
+       "├─────────────────┼────────────────────┤\n",
+       "│ 862a1005fffffff │ 1.1295640074211502 │\n",
+       "│ 862a10747ffffff │  0.675799283154122 │\n",
+       "│ 862a1009fffffff │  1.140124796527401 │\n",
+       "│ 862a1045fffffff │ 1.4863380281690142 │\n",
+       "│ 862a10197ffffff │ 1.6855555555555555 │\n",
+       "│ 862a10757ffffff │ 0.7489915492957745 │\n",
+       "│ 862a103afffffff │  1.231140350877193 │\n",
+       "│ 862a10447ffffff │  2.945642458100559 │\n",
+       "│ 862a10037ffffff │ 3.0918773946360147 │\n",
+       "│ 862a10cefffffff │ 1.1579166666666667 │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│        ·        │                 ·  │\n",
+       "│ 862b8b057ffffff │               6.07 │\n",
+       "│ 862aa956fffffff │                1.0 │\n",
+       "│ 862ac6347ffffff │               0.76 │\n",
+       "│ 86397281fffffff │                2.0 │\n",
+       "│ 862a5421fffffff │               3.08 │\n",
+       "│ 862b1c667ffffff │               1.96 │\n",
+       "│ 862b8db6fffffff │                1.4 │\n",
+       "│ 862a84c1fffffff │                4.0 │\n",
+       "│ 862a13c67ffffff │                0.5 │\n",
+       "│ 86016538fffffff │                3.0 │\n",
+       "├─────────────────┴────────────────────┤\n",
+       "│ 850 rows (20 shown)        2 columns │\n",
+       "└──────────────────────────────────────┘"
       ]
      },
      "execution_count": null,
